fix: lock dropdowns during freebie mode
The freebie mode styles were modified due to certain elements still being interactive during freebie mode.

So, this commit makes sure the custom skill textfields, Discipline/Background dropdowns, and Humanity/Path are no longer clickable in freebie mode.

Also, finally changed "Humanity & Path" to "Humanity/Path".

--- a/v20.html
+++ b/v20.html
@@ -921,7 +921,7 @@ V20 Character sheet
       <div class="flex flex-col gap-9">
 
         <div id="humanity-section">
-          <h3>humanity & path</h3>
+          <h3>humanity / path</h3>
         <div class="flex flex-col gap-3">
 
           <!-- Path dropdown -->
