style: hide V5 sheet

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Homepage
         <a href="v20.html" class="btn group">
           create a <span class="span">V20</span> character sheet
         </a>
-        <a href="v5.html" class="btn group">
+        <a href="v5.html" class="btn group hidden">
           create a <span class="span">V5</span> character sheet
         </a>
       </div>
