style: change Basics to for V5
Swapped Nature/Demeanor for Archetype and Predator Type.

--- a/v5.html
+++ b/v5.html
@@ -103,16 +103,16 @@ V5 Character sheet
             <input type="text" name="concept" placeholder="concept" class="textfield">
           </label>
 
-          <!-- Nature -->
-          <label class="label">nature
+          <!-- Archetype -->
+          <label class="label">archetype
             <select name="nature" class="dropdown text-textPrimary">
               <option value="" disabled selected hidden>nature</option>
               <!-- Options will be added here by JavaScript -->
             </select>
           </label>
 
-          <!-- Demeanor -->
-          <label class="label">demeanor
+          <!-- Predator type (should affect stats?) -->
+          <label class="label">predator type
             <select name="demeanor" class="dropdown text-textPrimary">
               <!-- Do not include [text-textPrimary in shared class!] -->
               <option value="" disabled selected hidden>demeanor</option>
@@ -145,7 +145,7 @@ V5 Character sheet
           </select>
         </label>
 
-        <!-- Generation -->
+        <!-- Generation (probably cut down?) -->
         <label class="label">generation
           <select name="generation" class="dropdown">
             <option value="" disabled selected hidden>generation</option>
