feat: add V5 Desire/Ambition textfields
Adds new looooong textfield for Desire/Ambition set below Clan/Sire, etc. Might change to textarea.

--- a/v5.html
+++ b/v5.html
@@ -165,6 +165,21 @@ V5 Character sheet
         </label>
       </div>
 
+      <!-- Desire & Ambition? -->
+      <div class="flex flex-col gap-4">
+
+          <!-- Desire -->
+          <label class="label">desire
+            <input type="text" name="desire" placeholder="desire" class="textfield">
+          </label>
+
+          <!-- Ambition -->
+          <label class="label">ambition
+            <input type="text" name="ambition" placeholder="ambition" class="textfield">
+          </label>
+
+      </div>
+
     </section>
 
     <!-- [Attributes] -->
