style: modify 'sm' style for generation dropdown
Centers the Generation dropdown for the `sm` screen size. Will implement in V20 as well.

--- a/v5.html
+++ b/v5.html
@@ -146,7 +146,7 @@ V5 Character sheet
         </label>
 
         <!-- Generation (probably cut down?) -->
-        <label class="label">generation
+        <label class="label sm:col-span-2 sm:mx-[25%] lg:col-auto lg:mx-0">generation
           <select name="generation" class="dropdown">
             <option value="" disabled selected hidden>generation</option>
             <option value="4th">4th</option>
