--- a/v5.html
+++ b/v5.html
@@ -105,17 +105,17 @@ V5 Character sheet
 
           <!-- Archetype -->
           <label class="label">archetype
-            <select name="nature" class="dropdown text-textPrimary">
-              <option value="" disabled selected hidden>nature</option>
+            <select name="archetype" class="dropdown text-textPrimary">
+              <option value="" disabled selected hidden>archetype</option>
               <!-- Options will be added here by JavaScript -->
             </select>
           </label>
 
           <!-- Predator type (should affect stats?) -->
           <label class="label">predator type
-            <select name="demeanor" class="dropdown text-textPrimary">
+            <select name="predatorType" class="dropdown text-textPrimary">
               <!-- Do not include [text-textPrimary in shared class!] -->
-              <option value="" disabled selected hidden>demeanor</option>
+              <option value="" disabled selected hidden>predator type</option>
             </select>
           </label>
 
