style: change Attributes to match V5

--- a/v5.html
+++ b/v5.html
@@ -165,7 +165,7 @@ V5 Character sheet
         </label>
       </div>
 
-      <!-- Desire & Ambition? -->
+      <!-- Desire & Ambition -->
       <div class="flex flex-col gap-4">
 
           <!-- Desire -->
@@ -191,12 +191,6 @@ V5 Character sheet
           <!-- Physical -->
           <div class="mb-7">
             <h4 class="mb-3">physical <span></span></h4>
-              <select name="attribute-priority" class="dropdown-custom">
-                <option value="" disabled selected hidden></option>
-                <option value="primary">primary</option>
-                <option value="secondary">secondary</option>
-                <option value="tertiary">tertiary</option>
-            </select> 
           </div>
 
           <!-- Strength, Dexterity, Stamina -->
@@ -237,13 +231,8 @@ V5 Character sheet
           <!-- Social -->
           <div class="mb-7">
             <h4 class="mb-3">social <span></span></h4>
-            <select name="attribute-priority" class="dropdown-custom">
-              <option value="" disabled selected hidden></option>
-              <option value="primary">primary</option>
-              <option value="secondary">secondary</option>
-              <option value="tertiary">tertiary</option>
-            </select> 
           </div>
+
           <!-- Charisma, Manipulation, Appearance -->
           <div class="dots-wrapper">
             <div class="dots">
@@ -267,7 +256,7 @@ V5 Character sheet
               </div>
             </div>
             <div class="dots">
-              <span>appearance</span>
+              <span>composure</span>
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -282,25 +271,10 @@ V5 Character sheet
           <!-- Mental -->
           <div class="mb-7">
             <h4 class="mb-3">mental <span></span></h4>
-            <select name="attribute-priority" class="dropdown-custom">
-              <option value="" disabled selected hidden></option>
-              <option value="primary">primary</option>
-              <option value="secondary">secondary</option>
-              <option value="tertiary">tertiary</option>
-            </select> 
           </div>
+
           <!-- Perception, Intelligence, Wits -->
           <div class="dots-wrapper">
-            <div class="dots">
-              <span>perception</span>
-              <div class="dot-group">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-              </div>
-            </div>
             <div class="dots">
               <span>intelligence</span>
               <div class="dot-group">
@@ -313,6 +287,16 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>wits</span>
+              <div class="dot-group">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+              </div>
+            </div>
+            <div class="dots">
+              <span>resolve</span>
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
