style: add specialty textfield to Skills
This adds a textfield for each item in Skill for specialties. Custom skill textfields were also removed.

--- a/v5.html
+++ b/v5.html
@@ -321,6 +321,7 @@ V5 Character sheet
           <div class="dots-wrapper">
             <div class="dots">
               <span>athletics</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -331,6 +332,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>brawl</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -341,6 +343,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>craft</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -351,6 +354,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>drive</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -361,6 +365,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>firearms</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -371,6 +376,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>larceny</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -381,6 +387,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>melee</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -391,6 +398,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>stealth</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -401,16 +409,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>survival</span>
-              <div class="dot-group">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-              </div>
-            </div>
-            <div class="dots">
-              <input type="text" name="custom_physical_skill" placeholder="custom physical" class="textfield-custom">
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -426,6 +425,7 @@ V5 Character sheet
           <div class="dots-wrapper">
             <div class="dots">
               <span>animal ken</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -436,6 +436,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>etiquette</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -446,6 +447,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>insight</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -456,6 +458,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>intimidation</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -466,6 +469,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>leadership</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -476,6 +480,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>performance</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -486,6 +491,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>persuasion</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -496,6 +502,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>streetwise</span>
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -506,16 +513,7 @@ V5 Character sheet
             </div>
             <div class="dots">
               <span>subterfuge</span>
-              <div class="dot-group">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-              </div>
-            </div>
-            <div class="dots">
-              <input type="text" name="custom_social_skill" placeholder="custom social" class="textfield-custom">
+              <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
               <div class="dot-group">
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -531,6 +529,7 @@ V5 Character sheet
           <div class="dots-wrapper">
           <div class="dots">
             <span>academics</span>
+            <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
             <div class="dot-group">
               <span class="dot"></span>
               <span class="dot"></span>
@@ -541,6 +540,7 @@ V5 Character sheet
           </div>
           <div class="dots">
             <span>awareness</span>
+            <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
             <div class="dot-group">
               <span class="dot"></span>
               <span class="dot"></span>
@@ -551,6 +551,7 @@ V5 Character sheet
           </div>
           <div class="dots">
             <span>finance</span>
+            <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
             <div class="dot-group">
               <span class="dot"></span>
               <span class="dot"></span>
@@ -561,6 +562,7 @@ V5 Character sheet
           </div>
           <div class="dots">
             <span>investigation</span>
+            <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
             <div class="dot-group">
               <span class="dot"></span>
               <span class="dot"></span>
@@ -571,6 +573,7 @@ V5 Character sheet
           </div>
           <div class="dots">
             <span>medicine</span>
+            <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
             <div class="dot-group">
               <span class="dot"></span>
               <span class="dot"></span>
@@ -581,6 +584,7 @@ V5 Character sheet
           </div>
           <div class="dots">
             <span>occult</span>
+            <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
             <div class="dot-group">
               <span class="dot"></span>
               <span class="dot"></span>
@@ -591,6 +595,7 @@ V5 Character sheet
           </div>
           <div class="dots">
             <span>politics</span>
+            <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
             <div class="dot-group">
               <span class="dot"></span>
               <span class="dot"></span>
@@ -601,6 +606,7 @@ V5 Character sheet
           </div>
           <div class="dots">
             <span>science</span>
+            <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
             <div class="dot-group">
               <span class="dot"></span>
               <span class="dot"></span>
@@ -611,6 +617,7 @@ V5 Character sheet
           </div>
           <div class="dots">
             <span>technology</span>
+            <input type="text" name="skill_specialty" placeholder="specialty" class="textfield-custom">
             <div class="dot-group">
               <span class="dot"></span>
               <span class="dot"></span>
@@ -618,22 +625,11 @@ V5 Character sheet
               <span class="dot"></span>
               <span class="dot"></span>
             </div>
-          </div>
-          <div class="dots">
-            <input type="text" name="custom_mental_skill" placeholder="custom mental" class="textfield-custom">
-            <div class="dot-group">
-              <span class="dot"></span>
-              <span class="dot"></span>
-              <span class="dot"></span>
-              <span class="dot"></span>
-              <span class="dot"></span>
-            </div>
-          </div>
           </div>
         </div>
       </div>
 
-    </section>```
+    </section>
 
   </main>
 
