--- a/v20.html
+++ b/v20.html
@@ -58,7 +58,7 @@ V20 Character sheet
 
     <!-- Left header group -->
     <div class="flex gap-3 items-center">
-      <h4 class="font-heading text-lg hover:underline hover: underline-offset-4 sm:text-2xl"> <a
+      <h4 class="font-heading text-lg !mb-0 hover:underline hover:underline-offset-4 sm:text-2xl"> <a
           href="index.html">schrecknet-lite</a></h4>
       <p>/ <span class="text-accent">v20</span> character sheet</p>
     </div>
@@ -1056,6 +1056,24 @@ V20 Character sheet
     </div>    
 
   </main>
+
+  <!-- "Save as..." modal -->
+  <div id="save-modal-overlay" class="hidden fixed inset-0 bg-black bg-opacity-70 z-50 justify-center items-center">
+    <div id="save-modal" class="flex flex-col gap-8 bg-foreground pt-10 pb-5 px-10 rounded-round text-center">
+      <div class="flex flex-col gap-10">
+        <div>
+          <h2>save your character sheet</h2>
+          <p class="text-textSecondary">choose the export format</p>        
+        </div>
+        <div class="flex gap-5 justify-center items-center">
+          <button id="save-as-pdf-btn" class="btn-float group">save as <span class="span">PDF</span></button>
+          <button id="save-as-txt-btn" class="btn-float group">save as <span class="span">TXT</span></button>
+        </div>        
+      </div>
+
+      <button id="close-modal-btn" class="text-textSecondary transition hover:text-accent text-4xl">&times;</button>
+    </div>
+  </div>
 
   <!-- Javascript -->
   <script type="module" src="./src/js/app.js"></script>
