--- a/v20.html
+++ b/v20.html
@@ -1050,8 +1050,8 @@ V20 Character sheet
         <img class="w-5 hidden transition group-hover:block"  src="src/reload-white.png" alt="reset freebie points">
       </button>
       <!-- Button to print as PDF -->
-      <button id="save-pdf-btn" class="btn-float group hidden">
-        save as <span class="span">PDF</span>
+      <button id="save-sheet-btn" class="btn-float group hidden">
+        <span class="span">save</span> sheet
       </button>
     </div>    
 
