fix: correct typo on the title (embarassing)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Homepage
 
     <!-- Hero / Title + Description -->
     <div class="text-center">
-      <h1 class="font-heading text-5xl sm:text-7xl lg:text-8xl lg:mb-2">shrecknet-lite</h1>
+      <h1 class="font-heading text-5xl sm:text-7xl lg:text-8xl lg:mb-2">schrecknet-lite</h1>
 
       <!-- Mobile Only -->
       <p class=" text-textSecondary text-lg sm:hidden">
@@ -59,14 +59,14 @@ Homepage
 
       <!--  Tablets Only -->
       <p class=" text-textSecondary text-base hidden sm:block lg:hidden">
-        welcome to / --------------------- \ by
+        welcome to / ------------------------- \ by
         <a href="https://github.com/overuseofrem/schrecknet-lite"
           class="link">frantan</a>
       </p>
 
       <!-- Desktop Only -->
       <p class=" text-textSecondary text-xl hidden lg:block">
-        welcome to / ------------------------ \ by
+        welcome to / ---------------------------- \ by
         <a href="https://github.com/overuseofrem/schrecknet-lite"
           class="link">frantan</a>
       </p>
